fixed form-choice breaking on mobile

--- a/stylesheets/_structure.forms.scss
+++ b/stylesheets/_structure.forms.scss
@@ -160,6 +160,10 @@
             margin-left: 0;
         }
     }
+
+    .form__group.form-choice > .control__label {
+        display: inline-block;
+    }
 }
 
 .fieldset {
